<resources>
    <string name="app_name">Task_ZiffyTech</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>

    <string name="city">City: </string>
    <string name="date">Date: </string>
    <string name="temp">Temp: </string>
    <string name="pressure">Pressure: </string>
    <string name="humidity">Humidity: </string>
    <string name="weather">Weather: </string>
    <string name="speed">Speed: </string>
    <string name="degree">Degree: </string>
    <string name="clouds">Clouds: </string>
    <string name="rain">Rain:</string>

    <string name="day">Day:- </string>
    <string name="min">Min:- </string>
    <string name="max">Max:- </string>
    <string name="night">Night:- </string>
    <string name="evening">Evening:- </string>
    <string name="morning">Morning:- </string>

</resources>
