<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.myproject.ziffytech.fragments.DetailsFragment"
    android:orientation="vertical"
    android:padding="4dp">


    <TextView
        android:id="@+id/details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/details"
        style="@style/style3"/>

    <View
        style="@style/style_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            style="@style/style1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/city" />

        <TextView
            android:id="@+id/details_cityName"
            style="@style/style2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.5" />
    </LinearLayout>

    <View
        style="@style/style_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            style="@style/style1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/date" />

        <TextView
            android:id="@+id/details_dateTime"
            style="@style/style2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.5" />
    </LinearLayout>

    <View
        style="@style/style_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            style="@style/style1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/temp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"/>
                <TextView
                    android:id="@+id/details_day"
                    style="@style/style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"/>
                  <TextView
                    android:id="@+id/details_min"
                    style="@style/style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:orientation="horizontal">
                <TextView
                    style="@style/style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max"/>
            <TextView
                android:id="@+id/details_max"
                style="@style/style2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:orientation="horizontal">
                <TextView
                    style="@style/style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/night"/>
            <TextView
                android:id="@+id/details_night"
                style="@style/style2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:orientation="horizontal">
                <TextView
                    style="@style/style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening"/>
            <TextView
                android:id="@+id/details_evening"
                style="@style/style2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:orientation="horizontal">
                <TextView
                    style="@style/style2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/morning"/>
            <TextView
                android:id="@+id/details_morning"
                style="@style/style2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/details_temp"
            style="@style/style2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.5" />
    </LinearLayout>

    <View
        style="@style/style_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            style="@style/style1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/pressure" />

        <TextView
            android:id="@+id/details_pressure"
            style="@style/style2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.5" />
    </LinearLayout>

    <View
        style="@style/style_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            style="@style/style1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/details_humidity"
            style="@style/style2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.5" />
    </LinearLayout>

    <View
        style="@style/style_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            style="@style/style1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/weather" />

        <TextView
            android:id="@+id/details_weather"
            style="@style/style2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.5" />
    </LinearLayout>

    <View
        style="@style/style_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            style="@style/style1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/speed" />

        <TextView
            android:id="@+id/details_speed"
            style="@style/style2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.5" />
    </LinearLayout>

    <View
        style="@style/style_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            style="@style/style1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/degree" />

        <TextView
            android:id="@+id/details_degree"
            style="@style/style2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.5" />
    </LinearLayout>


    <View
        style="@style/style_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            style="@style/style1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/clouds" />

        <TextView
            android:id="@+id/details_clouds"
            style="@style/style2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.5" />
    </LinearLayout>

    <View
        style="@style/style_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            style="@style/style1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/rain" />

        <TextView
            android:id="@+id/details_rain"
            style="@style/style2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.5" />
    </LinearLayout>

    <View
        style="@style/style_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>
</ScrollView>